--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/*  - - - PREFERENCIA DE USUARIO COLOR LIGHT - - -
+    + + + CONFIGURADO EN SISTEMA + + +
+    - - - NO SWITCHEABLE - - -
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -66,4 +71,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
