--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,46 @@ button {
 .codes p {
   font-family: var(--code-font);
 }
+.rubik {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 8rem);
+  grid-template-rows: repeat(4, 8rem);
+}
+.rubik-buttons {
+  display: flex;
+  /* align-items: end; */
+  flex-direction: column;
+  justify-content: end;
+}
+.rubik button {
+  font-size: 0.7rem;
+}
+.cube-faces {
+  border: 1.5px solid #888;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+.front {
+  border: 3px dashed #aaa;
+}
+.cube-color-red {
+  background-color: #cc2211;
+}
+.cube-color-green {
+  background-color: #0a0;
+}
+.cube-color-blue {
+  background-color: #00f;
+}
+.cube-color-yellow {
+  background-color: #dd0;
+}
+.cube-color-orange {
+  background-color: #a60;
+}
+.cube-color-white {
+  background-color: #fff;
+}
