--- a/src/App.css
+++ b/src/App.css
@@ -337,3 +337,34 @@ button {
   font-family: "Courier New", Courier, monospace;
   font-size: 0.9rem;
 }
+
+/*  - - Login Form - -  */
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+  border: 1.5px solid #fff;
+  border-radius: 1.7rem;
+  padding: 2rem;
+}
+.login-form label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 25px;
+}
+.login-form input {
+  display: flex;
+  justify-content: space-between;
+  max-width: 60%;
+  height: 4rem;
+  border: 1px solid #fff;
+  border-radius: 1rem;
+  margin: 1rem;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  background-color: transparent;
+  font-size: 25px;
+}
